Changelog
=========

0.2 (unreleased)
----------------

- Managed stop and start separately
  [sgeulette]
- Added new parameters to run functions like import step or upgrade step.
  [sgeulette]
- Added new parameter to manage authentication plugins
  [sgeulette]
- Added new parameter to manage messages
  [sgeulette]
- Can change logger level in run_script
  [sgeulette]

0.1 (2018-06-21)
----------------

- Package created
  [sgeulette]