@@ -14,6 +14,10 @@ Changelog
   [sgeulette]
 - Can change logger level in run_script
   [sgeulette]
+- Added new parameter to pass environment variable
+  [sgeulette]
+- Added new parameter to patch instance-debug interpreter. So bin/instance run is possible without Unauthorized.
+  [sgeulette]
 
 0.1 (2018-06-21)
 ----------------
